--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "leaflet": "~0.7.3"
+    "leaflet": "~0.7.3",
+    "fontawesome": "~4.3.0"
   }
 }
